--- a/content/post/2020-10-28-idea-for-casino-games-where-the-player-almost-always-win.Rmd
+++ b/content/post/2020-10-28-idea-for-casino-games-where-the-player-almost-always-win.Rmd
@@ -57,7 +57,7 @@ I thought an interesting set-up for a game would be one that flipped this and ma
 
 As an example, imagine a roulette-like wheel numbered from 1 to 10. You are instructed to pick a number. As long as you *don't* land on that number you will win \$5. If you *do* land on it you will lose \$50 (or something along those lines for whatever size of bet^[one can of course edit the odds to set things appropriately]). This particular bet would yield the casino an expected value of 50 cents[^4]. It also yields the player the excitement of an expected nine wins in a row^[See [thread](https://math.stackexchange.com/questions/1119872/on-average-how-many-times-must-i-roll-a-dice-until-i-get-a-6#:~:text=About%2014%20times%20it%20will,100%20and%20get%20%E2%89%886.) for explanation.]. The advert for the game might focus on the idea of "Tempting Fate[^1]."
 
-[^4]: I imagine casinos have considered setting games like this up and that there are good reasons they don't exist. For example, players have to put up a lot of money to win anything, so the dollars that go to the house per dollar bet is going to be much lower than other games that they could fill their floor space with. At least for the examples I go through in thist post... I actually think a bit less of an imbalance would be better, as suggested by [Wallet Roulette] as described in the [Appendix].
+[^4]: I imagine casinos have considered setting games like this up and that there are good reasons they don't exist. For example, players have to put up a lot of money to win anything, so the dollars that go to the house per dollar bet is going to be much lower than other games that they could fill their floor space with. At least for the examples I go through in this post... I actually think a bit less of an imbalance would be better, as suggested by [Wallet Roulette] as described in the [Appendix].
 
 [^1]: Many casino games could be redesigned in this manner -- where you are likely to win but always face the risk of a large loss. You might picture a room in the casino that had an 'Upside Down' style feel where all the slots and similar games there were reconstructed accordingly.
     
@@ -73,53 +73,52 @@ There are a variety of forms this game could be tested in -- it doesn't have to 
 
 ## Wallet Roulette
 
-*Below I will describe the rules for a game that I've come-up with called "Wallet Roulette"^[or "Russian Wallet Roulette" or some variation on this.] that is designed to take advantage of the rules described in the post. The game is set-up to look and feel somewhat similar to slots but with a payout structure that is inverted to typical slot machines (i.e. the player typically has small wins followed by occasional large losses^[However in the "Game Options" I provide ways by which a player could set their own risk levels (e.g. by filling their gun with more bullets). Hence I also envision the game having a bit more customizability compared to what is typical in slots.]).*
+*Below I will describe the rules for a game that I've come-up with called "Wallet Roulette^[or "Russian Wallet Roulette" or some variation on this.]" that is designed to take advantage of the ideas described in the post above. The game is set-up to look and feel somewhat similar to a slot machine but with a win / loss structure that is slightly inverted compared to typical slots^[I.e. the player typically has small wins followed by occasional large losses whereas slots tend to have small losses with occasionally larger wins. However in the "Game Options" I provide ways by which a player could set their own risk levels (e.g. by filling their gun with more bullets). Hence I also envision the game having a bit more customizability compared to what is typical in slots.].*
 
-The virtual game is set in a dingy bar-like setting with shady (though cartoonish) figures holding wads of cash in their hands and crowded at the edges of the screen watching you expectantly. A sinister looking bartender / attendant stands behind a counter administers play. 
+The virtual game is set in a dingy bar-like setting with shady (though cartoonish) figures holding wads of cash in their hands and crowded at the edges of the screen. They stare at you expectantly. A sinister looking attendant standing behind the bar administers play. 
 
-The game begins when you take a wallet and fill it with some amount of money and place it in front of you. You then take a gun, a revolver, with six chambers in it and point it at your wallet. The round starts when you fill one of the chambers with a bullet, spin the cylinder, wait for the clicking to stop, and pull the trigger. If the gun fires your wallet will explode and the money flies out of it and is scooped up by the shady figures. If it clicks (having landed on an empty chamber) the attendant grimaces and slides some money to you across the counter (this gets added to your account or can be added to your wallet, i.e. your bet). You then decide whether to play another round (filling a new wallet with money if your previous one had exploded) or you take the money out of your current wallet and leave.
+The game begins when you take a wallet and fill it with money (your bet) and place it in front of you. A gun, a revolver, with six chambers in it is pointed it at your wallet. The round starts when you fill one of the chambers with a bullet, spin the cylinder, wait for the clicking to stop, and pull the trigger. If the gun fires, your wallet explodes and the money flies out and is scooped up by the shady figures. If it clicks (having landed on an empty chamber) the attendant grimaces and slides some money to you across the counter (this gets added to your account or can be added to the wallet, i.e. your bet). You then decide whether to play another round (first filling a new wallet with money if your previous one had exploded) or you take out your money and leave.
 
-For a six-shooter, a \$30 wallet would need to payout less than \$6 for the house to have an advantage. An expected value for the user of $\frac{5}{6}$ to $\frac{11}{12}$ on the dollar could be appropriate (~83.3 to ~91.7 cents for every dollar gambled)^[Slot machines typically hover around a 10 cent on the dollar advantage for the house.]. Hence for a wallet with \$30 there would be a payout of between \$5 and \$5.50 for a miss.  
+For a six-shooter, a \$30 wallet would need to payout less than \$6 for the house to have an advantage. An expected value for the user of $\frac{5}{6}$ to $\frac{11}{12}$ on the dollar could be appropriate (~83.3 to ~91.7 cents for every dollar gambled)^[Slot machines typically hover around a 10 cent on the dollar advantage for the house.]. Hence for a wallet filled with \$30 there would be a payout of between \$5 and \$5.50 for a miss.  
 
 **Game Options:**
 
-The game options below are some top-of-mind notes regarding features, options, and gameplay for "Wallet Roulette." This is neither a necessary nor exhaustive list. Some of these ideas enhance or modify play more than others. Many of these would need to be tested on players to determine the ideal options to set for the game.  
+The game options below are some top-of-mind notes regarding features, options, and gameplay for "Wallet Roulette." This is neither a necessary nor exhaustive list^[Some of these ideas enhance or modify play more than others. Many of these would need to be tested on players to determine the ideal options to set for the game.].   
 
-When describing payout rates for particular game configurations, I stick with the idea of an ~83.3 to ~91.7 cent return on every dollar gambled for the player (so will usually report what the event would look like at each of these payout rates).
+When describing payout rates for particular game configurations, I stick with an ~83.3 to ~91.7 cent return on every dollar gambled for the player (so will usually report what the event would look like at each of these payout rates).
 
 * You may be able to add multiple bullets to the chambers, which will increase payouts (along with the risk the player is taking on). 
     * For example, for the \$30 wallet and a six shooter, adding a second bullet would change the payouts on a miss to be between \$12.50 and \$13.75  (using the previously described payout rates)
-    * There are reasons not to allow for half or greater of the chambers to be filled[^5], but if this is allowed, the other payout rates on a \$30 wallet with a six-shooter would be:
+    * There are reasons not to allow for half or greater of the chambers to be filled[^5], but say this is allowed, the other payout rates on a \$30 wallet with a six-shooter would be:
         * 1 bullet: \$5 to \$5.50
         * 2 bullets: \$12.50 to \$13.75
         * 3 bullets: \$25 to \$27.50
         * 4 bullets: \$50 to \$55
         * 5 bullets: \$125 to \$137.50
-* Players can also have the option of adding money bullets to the chamber. These bullets (if triggered / landed upon) infuse their wallet with additional cash (i.e. they shoot money *into* their wallet). The catch is that if adding a "money bullet" to the chamber, the player must also add a regular bullet. 
+* Players can also have the option of adding "money bullets" to the chamber. These bullets (if triggered / landed upon) infuse the wallet with additional cash (they shoot money *into* the wallet). The catch is that when adding a "money bullet" to the chamber, perhaps the player must also add a regular bullet. 
   * By default triggering a "money bullet" would double the size of the wallet. 
   * This default behavior though represents a bad deal for the player. Two regular bullets and one "money bullet" in a six-shooter reduces the expected win rate for the player to 75 to 77.5 cents on the dollar (if the 'miss' payout rates are unchanged). 
   * If we wanted to keep the dollar win rate the same when adding a "money bullet" the bullet would need to be worth more like $\frac{7}{6}$ the value of the wallet (i.e. ~\$35 rather than \$30 in this case) alternatively the value of 'misses' could be increased^[Though this approach seems less appealing.].
-* I am debating whether it makes sense to play where you can see the bullet in the cylinder spinning or if it should be obscured. Being able to see it makes it almost identical to roulette. I kind of like the idea of not being able to see it so that you only know the outcome once the trigger is pulled.
-* Playing with the bullet's position obscured (until the trigger is pulled) would allow for the player to add or take money away from the wallet up until *right before* pulling the trigger (potentially adding suspense and some last second hand-wrangling).
+* The bullet in the cylinder can either be shown or obscured (while it is spinning). Being able to see it makes the gameplay feel almost identical to roulette^[An advantage with this is that it may reassure the player by making it appear more fair -- as they can *see* the bullet moving]. I slightly prefer the idea of not being able to see the bullet in the chamber, that way you only know the outcome once the trigger is pulled.
+* Playing with the bullet's position obscured would allow for the player to add or take money away from the wallet up until *right before* pulling the trigger (adding suspense and potentially some last second hand-wringing).
 * Keeping the bullet's position obscured also provides the option to pull the trigger multiple times during a round. The payout rate would go up for each time you pulled the trigger in a round.
-    * It may make sense to have a limitation on the number of times in a round that the trigger can be pulled[^5]. If you do allow multiple trigger pulls here is what the payout would be for each pull within a round (if keeping to previously described payout rates for a six shooter with one bullet in it):
+    * It may make sense to have a limitation on the number of times in a round that the trigger can be pulled[^5]. If you do allow multiple trigger pulls, the items below show what the payout would be for each pull within a round (if keeping to previously described payout rates for a six shooter with one bullet in it):
         * 1st trigger pull: \$5 to \$5.50
         * 2nd pull: \$6.25 to \$6.80
         * 3rd pull: \$8.33 to \$9.17
         * 4th pull: \$12.50 to \$13.75
         * 5th pull: \$25 to \$27.50
 * As the player plays more they can update their gear for the game. For example they may be able to get... 
-    * a fancier cylinder, handle, trigger, or other part of the gun 
-    * get a different kind of gun
+    * a fancier cylinder, handle, trigger, or other part of the gun or a different gun entirely
     * different types of bullets with different types of animations that go with them
     * a nicer wallet
     * decals on your gear
     * Most of these player earned items wouldn't change game outcomes but would simply provide different animations or game stylings.
-    * however they may be able to earn things like "super money bullets" or other accelerators with better payouts than the default behavior (these "super money bullets" may keep the win-rate near $\frac{5}{6}$ rather than making it worse -- as described in the bullet on default "money bullet" behavior above^[Using Prospect Theory lingo, the default "money bullet" option becomes a "dominated" option.]).
-* I am debating whether payouts to the player should default to be payed directly to the player or added to their wallet. I lean towards having the payouts be given directly to the player. The potential advantage of putting them in the wallet is that it increases their bet size. The downside is that if they lose the wallet, the player may be left feeling like they haven't won anything. Hence leaning towards having the payout go to the players account directly.
-* If the game is played in a casino, the dollars in the player's account could be tied to a player card or account with the casino (which they use to fill their wallet for the game). If playing through an application or online it would be tied to their login. The same goes for any gear or other items they've earned as a part of playing (so they keep these items even if they return to play later).
-* You may be able to play with cylinders with different numbers of chambers in them, e.g. sizes of 5, 6, 10. Cylinders with more spots will generally have smaller payouts. My guess is 5 to 9 chambers would be the sweet-spot. People tend to overestimate the likelihood of very rare events, so a cylinder size of 20, 50, etc. would probably be too large^[The animation may also look awkward, as it would be a revolver with a tremendous number of bullets... a tommy gun would almost be more appropriate.] (as the smallness of payouts would not be commensurate with the *perceived* risk the player is taking on).
-* At the start, the player may be able to choose between two types of guns: a standard revolver, or a nerf gun equivalent. Both play the same (but may have slightly different animations when fired). The nerf gun option is just a way of providing options for a player that does not like traditional guns.
-* For cases where the game is played at a casino (rather than through an application), there could be a crank bar or wheel that when interacted with by the player starts the spinning of the virtual gun's cylinder. Once the cylinder stops spinning, there could also be a physical trigger that a player pulls in order to play the round. For a phone or computer application, these parts of the game would be interacted with via touch screen or mouse.
+    * however they may be able to earn things like "super money bullets" or other accelerators with better payouts than described in the default behavior (but not erasing the house advantage)^[These "super money bullets" may keep the win-rate near $\frac{5}{6}$ rather than making it worse -- as described in the bullet on default "money bullet" behavior above. Using Prospect Theory lingo, the default "money bullet" option becomes a "dominated" option.]).
+* I am debating whether payouts to the player should default to be payed directly to the player or to be added to their wallet. I lean towards having the payouts default to be given directly to the player^[The potential advantage of putting them in the wallet is that it increases their bet size. The downside is that if they lose the wallet, the player may be left feeling like they haven't won anything. Hence leaning towards having the payout go to the players account directly.].
+* If the game is played in a casino, the dollars in the player's account could be tied to a player card or account with the casino (which they use to fill their wallet for the game). If playing through an application or online it would be tied to their login. The same goes for any gear or other items they've earned as a part of playing^[So they keep items they've earned even if they return to play later.].
+* It may make sense to allow play with cylinders with different numbers of chambers in them, e.g. sizes of 5, 6, 10. Cylinders with more spots will generally have smaller payouts. My guess is 5 to 9 chambers would be the sweet-spot. People tend to overestimate the likelihood of very rare events, so a cylinder size of 20, 50, etc. would probably be too large^[The animation may also look awkward, as it would be a revolver with a tremendous number of bullets... a tommy gun would almost be more appropriate.] (as the smallness of payouts would not be commensurate with the *perceived* risk the player is taking on).
+* At the start, the player may be able to choose between two types of guns: a standard revolver, or a nerf gun equivalent. Both would play the same^[but may have slightly different animations when fired]. The nerf gun option is just a way of providing an option for players with a distaste for guns.
+* For cases where the game is played at a physical casino (rather than through an application), there could be a crank bar or wheel that when interacted with initiates the spinning of the cylinder. Once the cylinder stops spinning, there could also be a physical trigger that a player pulls in order to play the round^[For a phone or computer application, these parts of the game would be interacted with via touch screen or mouse.]. 
 
-[^5]: As doing so goes against some of the psychological principles of the game (of keeping win-rates high) and risks making the payout rates for the player to be too explicit (when there is an equal likelihood of winning and losing it becomes obvious what the payout rate is... it may be to the houses advantage to keep this obscured). On the otherhand, allowing this may be helpful in that it allows the player to set their risk threshold. On the whole I probably lean towards allowing the players to fill the gun with their wallets as it empowers them to pick their own risk level.
+[^5]: As doing so goes against some of the psychological principles of the game (of keeping win-rates high) and risks making the payout rates for the player to be too explicit (when there is an equal likelihood of winning and losing it becomes obvious what the payout rate is... it may be to the houses advantage to keep this obscured). On the other hand, allowing this may be helpful in that it allows the player to set their risk threshold. On the whole I probably lean towards allowing the players to fill the gun with their wallets as it empowers them to pick their own risk level.
